[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.13"
rand = "0.8.5"
serde = { version = "1.0.142", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
